Compact task design. Toggle completed on iOS fix.

--- a/src/Styles/apps/tasks.scss
+++ b/src/Styles/apps/tasks.scss
@@ -36,7 +36,7 @@ $label_medium_color: $yellow;
 
 .tasks-form {
     display: flex;
-    padding-bottom: 20px;
+    padding: 20px 0;
 
     input {
         margin: 0 20px;
@@ -97,6 +97,11 @@ $label_medium_color: $yellow;
 
         .checkbox {
             align-self: flex-start;
+            margin-top: -0.1rem;
+
+            button {
+                cursor: pointer;
+            }
         }
 
         .text {
@@ -105,6 +110,12 @@ $label_medium_color: $yellow;
             padding-left: 5px;
             padding-right: 35px;
             margin-bottom: 0;
+            text-overflow: ellipsis;
+            overflow: hidden;
+
+            .description{
+                white-space: nowrap;
+            }
         }
 
         .priority-popup {
